--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -20,3 +20,5 @@
   translation: "Edit this page"
 - id: ui.md.view
   translation: "View this page"
+- id: ui.lang.choose
+  translation: "Language"
